# oasis

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  ingest.py  pyproject.toml
.streamlit/: config.toml
oasis/: config.py  embeddings.py  generate.py  graph_rag.py  graph_store.py  llm.py  sources.py  vector_rag.py  viz.py
tests/: test_assembly.py  test_config.py  test_prompt.py  test_sources.py
