[project]
name = "oasis"
version = "0.1.0"
description = "Oasis — GraphRAG demo: one plain-language question, one cited answer assembled from four tools (Linear, Notion, Confluence, codebase)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5,<0.6",
    "langchain>=0.3,<0.4",
    "langchain-anthropic>=0.3,<0.4",
    "langchain-chroma>=0.2,<0.3",
    "langchain-community>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-experimental>=0.3,<0.4",
    "langchain-huggingface>=0.1,<0.2",
    "langchain-neo4j>=0.4,<0.5",
    "langchain-openai>=0.3,<0.4",
    "neo4j>=5.20,<6",
    "python-dotenv>=1,<2",
    "sentence-transformers>=3,<4",
    "streamlit>=1.36,<2",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
]
